style.css
.container {
	display: grid;
	width: 100vw;
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

h1 {
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	font-size: xx-large;
}

.input {
	display: grid;
	align-content: center;
	grid-template-rows: repeat(1, 2em);
	grid-template-columns: repeat(3, 20em);
	column-gap: 5px;
}

.book-input {
	grid-row: 2/4;
	font-family: 'Montserrat', sans-serif;
	padding: 2px 2px;
	border: 1px solid lightgray;
	border-radius: 5px;
}

.auth-input {
	grid-row: 2/4;
	font-family: 'Montserrat', sans-serif;
	padding: 2px 2px;
	border: 1px solid lightgray;
	border-radius: 5px;
}

#status {
	width: 50%;
	font-family: 'Montserrat', sans-serif;
	color: white;
	grid-row: 2/4;
	grid-column: 3/4;
	background-color: #abdafc;
	padding: 2px 2px;
	border: 1px solid lightgray;
	border-radius: 5px;
}

.button {
	grid-row: 2/4;
	font-family: 'Montserrat', sans-serif;
	color: white;
	background-color: #abdafc;
	width: 5em;
	border: 1px solid #abdafc;
	border-radius: 2px;
}

#read {
	font-family: 'Montserrat', sans-serif;
}

#unread {
	font-family: 'Montserrat', sans-serif;
}

.headers {
	display: grid;
	font-family: 'Montserrat', sans-serif;
	grid-template-rows: repeat(1, 2em);
	grid-template-columns: repeat(3, 20em);
	margin-top: 20px;
	padding: 0;
}

.title {
	text-align: left;
}

.author {
	text-align: center;
}

.status {
	text-align: right;
}

.dom-results {
	display: grid;
	grid-template-columns: repeat(1, 20em);
	grid-template-rows: repeat(4, 2em);
	margin-top: 20px;
	padding: 0;
}

.dom-results > div {
	font-family: 'Montserrat', sans-serif;
}

.dom-results > button {
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	width: 70px;
	height: 20px;
	grid-column: 5/6;
	background-color: #b8336a;
	border: 1px solid #b8336a;
	border-radius: 2px;
}

